libplist/include/plist/plist.h

    typedef __int32 int32_t;
    typedef unsigned __int8 uint8_t;
    typedef unsigned __int32 uint32_t;
    typedef unsigned __int64 uint64_t;
    typedef void *plist_t;
    typedef void* plist_dict_iter;
    typedef enum
    {
        PLIST_BOOLEAN,	
        PLIST_UINT,	
        PLIST_REAL,	
        PLIST_STRING,	
        PLIST_ARRAY,	
        PLIST_DICT,	
        PLIST_DATE,	
        PLIST_DATA,	
        PLIST_KEY,	
        PLIST_UID,      
        PLIST_NONE	
    } plist_type;
    PLIST_API_MSC plist_t plist_new_dict(void);
    PLIST_API_MSC plist_t plist_new_array(void);
    PLIST_API_MSC plist_t plist_new_string(const char *val);
    PLIST_API_MSC plist_t plist_new_bool(uint8_t val);
    PLIST_API_MSC plist_t plist_new_uint(uint64_t val);
    PLIST_API_MSC plist_t plist_new_real(double val);
    PLIST_API_MSC plist_t plist_new_data(const char *val, uint64_t length);
    PLIST_API_MSC plist_t plist_new_date(int32_t sec, int32_t usec);
    PLIST_API_MSC plist_t plist_new_uid(uint64_t val);
    PLIST_API_MSC void plist_free(plist_t plist);
    PLIST_API_MSC plist_t plist_copy(plist_t node);
    PLIST_API_MSC uint32_t plist_array_get_size(plist_t node);
    PLIST_API_MSC plist_t plist_array_get_item(plist_t node, uint32_t n);
    PLIST_API_MSC uint32_t plist_array_get_item_index(plist_t node);
    PLIST_API_MSC void plist_array_set_item(plist_t node, plist_t item, uint32_t n);
    PLIST_API_MSC void plist_array_append_item(plist_t node, plist_t item);
    PLIST_API_MSC void plist_array_insert_item(plist_t node, plist_t item, uint32_t n);
    PLIST_API_MSC void plist_array_remove_item(plist_t node, uint32_t n);
    PLIST_API_MSC uint32_t plist_dict_get_size(plist_t node);
    PLIST_API_MSC void plist_dict_new_iter(plist_t node, plist_dict_iter *iter);
    PLIST_API_MSC void plist_dict_next_item(plist_t node, plist_dict_iter iter, char **key, plist_t *val);
    PLIST_API_MSC plist_t plist_dict_get_item(plist_t node, const char* key);
    PLIST_API_MSC void plist_dict_set_item(plist_t node, const char* key, plist_t item);
    PLIST_WARN_DEPRECATED("use plist_dict_set_item instead")
    PLIST_API_MSC void plist_dict_insert_item(plist_t node, const char* key, plist_t item);
    PLIST_API_MSC void plist_dict_remove_item(plist_t node, const char* key);
    PLIST_API_MSC plist_t plist_get_parent(plist_t node);
    PLIST_API_MSC plist_type plist_get_node_type(plist_t node);
    PLIST_API_MSC void plist_get_key_val(plist_t node, char **val);
    PLIST_API_MSC void plist_get_string_val(plist_t node, char **val);
    PLIST_API_MSC void plist_get_bool_val(plist_t node, uint8_t * val);
    PLIST_API_MSC void plist_get_uint_val(plist_t node, uint64_t * val);
    PLIST_API_MSC void plist_get_real_val(plist_t node, double *val);
    PLIST_API_MSC void plist_get_data_val(plist_t node, char **val, uint64_t * length);
    PLIST_API_MSC void plist_get_date_val(plist_t node, int32_t * sec, int32_t * usec);
    PLIST_API_MSC void plist_get_uid_val(plist_t node, uint64_t * val);
    PLIST_API_MSC void plist_set_key_val(plist_t node, const char *val);
    PLIST_API_MSC void plist_set_string_val(plist_t node, const char *val);
    PLIST_API_MSC void plist_set_bool_val(plist_t node, uint8_t val);
    PLIST_API_MSC void plist_set_uint_val(plist_t node, uint64_t val);
    PLIST_API_MSC void plist_set_real_val(plist_t node, double val);
    PLIST_API_MSC void plist_set_data_val(plist_t node, const char *val, uint64_t length);
    PLIST_API_MSC void plist_set_date_val(plist_t node, int32_t sec, int32_t usec);
    PLIST_API_MSC void plist_set_uid_val(plist_t node, uint64_t val);
    PLIST_API_MSC void plist_to_xml(plist_t plist, char **plist_xml, uint32_t * length);
    PLIST_API_MSC void plist_to_bin(plist_t plist, char **plist_bin, uint32_t * length);
    PLIST_API_MSC void plist_from_xml(const char *plist_xml, uint32_t length, plist_t * plist);
    PLIST_API_MSC void plist_from_bin(const char *plist_bin, uint32_t length, plist_t * plist);